--- Version 0.5.7 - Oct-XX-2011
- Fix problems with using mclapply() inside RKWard
- Offer to add a new library location, automatically, if location selected for installation is not writable
- Reworked package installation / update dialog
- Fixed: Integrated help browser would not update navigation history when following page internal links
- Documentation on writing RKWard plugins is now accessible, locally
- The file filter for R script files is now configurable, and includes *.Rhistory, by default
- More obvious coloring of variable entry fields requiring user input in plugins
- Default size of the code display in plugin dialogs has been increased
- Removed support for downloading plugins using GHNS
- Added support for RKWard plugins shipped inside R packages 
- Fixed: PDFs and many other types of documents linked from help pages would not be opened, correctly
- Added support R 2.14.x
- Removed option to set options("printcmd")
- New option to run arbitrary (setup) commands in each session
- Added new pseudo graphics device "rk.printer.device" to provide printing via the KDE printer dialog
- Fixed: Printing was broken when kprinter is not available
- Support the results list new help.search() in R 2.14.x, which includes vignettes and demos
- rk.edit.files() and rk.show.files() gain parameter "prompt", which can be used to suppress user prompt
- Added function rk.demo(), which is similar to demo(), but opens the example script in a script editor window
- Fixed: Some plugin dialogs would not become visible, or be shown in very small size, with some window managers
- Fixed: Potential crash when using context menus with "focus follows mouse" window activation policy
- Added shortcut Ctrl+Enter to insert a line break and submit from a script editor
- Reduce CPU usage while idle
- Bar plot, dot chart, pie chart, and Pareto plot plugins gain more tabulation options
- rk.results() now prints rownames, where appropriate